--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Registro de equipos médicos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
+  <h1>Registro de equipos médicos</h1>
+  <form action="submit_form.php" method="post">
+    <label for="equipment_name">Nombre del equipo:</label>
+    <input type="text" id="equipment_name" name="equipment_name"><br><br>
+    <label for="equipment_type">Tipo de equipo:</label>
+    <input type="text" id="equipment_type" name="equipment_type"><br><br>
+    <label for="manufacturer">Fabricante:</label>
+    <input type="text" id="manufacturer" name="manufacturer"><br><br>
+    <input type="submit" value="Enviar">
+  </form>
 </body>
-
 </html>
